//$file${.::main.cpp} vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
//
// Model: sem.qm
// File:  ${.::main.cpp}
//
// This code has been generated by QM 7.0.1 <www.state-machine.com/qm>.
// DO NOT EDIT THIS FILE MANUALLY. All your changes will be lost.
//
// Copyright (c) 2005 Quantum Leaps, LLC. All rights reserved.
//
//                 ____________________________________
//                /                                   /
//               /    GGGGGGG    PPPPPPPP   LL       /
//              /   GG     GG   PP     PP  LL       /
//             /   GG          PP     PP  LL       /
//            /   GG   GGGGG  PPPPPPPP   LL       /
//           /   GG      GG  PP         LL       /
//          /     GGGGGGG   PP         LLLLLLL  /
//         /___________________________________/
//
// SPDX-License-Identifier: GPL-3.0-or-later
//
// This generated code is open-source software licensed under the GNU
// General Public License (GPL) as published by the Free Software Foundation
// (see <https://www.gnu.org/licenses>).
//
// NOTE:
// The GPL does NOT permit the incorporation of this code into proprietary
// programs. Please contact Quantum Leaps for commercial licensing options,
// which expressly supersede the GPL and are designed explicitly for
// closed-source distribution.
//
// Quantum Leaps contact information:
// <www.state-machine.com/licensing>
// <info@state-machine.com>
//
//$endhead${.::main.cpp} ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
#include "qpcpp.hpp"             // QP/C++ real-time embedded framework
#include <iostream>

extern "C" {
//............................................................................
void Q_onError(char const * const module, int id) {std::cerr << "Assertion failed in " << module << ':' << id << std::endl;exit(-1);}
void assert_failed(char const * const module, int_t const id); // prototype
void assert_failed(char const * const module, int_t const id) {Q_onError(module, id);}
} // extern "C"

namespace QP {
void QF::onStartup  (    ) {QF::consoleSetup();}
void QF::onCleanup  (void) {QF::consoleCleanup();}
void QF::onClockTick(void) {QTimeEvt::TICK_X(0U, nullptr);}  // QTimeEvt clock tick processing
} // namespace QP

enum AppSignals : std::uint32_t {
   TOUT_SIG = QP::Q_USER_SIG,
   PULL_BUTTON_SIG,
   BUTTON_SIG,
   PRINT_SIG,
   INACTIVE_SIG,
   RESUME_SIG,
MAX_PUB_SIG,
};

enum colorTime : std::uint32_t {
 COLOR_R_TIME = 1000,
 COLOR_R_USER_TIME = 3000,
 COLOR_Y_TIME = 300,
 COLOR_G_TIME = 6000,
 COLOR_Y_INACTIVE_TIME = 50,
 PULL_BUTTON_TIME =10,
 PRINT_TIME = 100,
};

#define PRINT(str) std::cout << str << std::endl;
#define REARM(time) APP::Traffic::inst.colorTimeEvt.rearm(time);
#define POST_TRAFFIC(evt_) APP::Traffic::inst.POST(evt_,this);

//$declare${AOs::Led} vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
namespace APP {

//${AOs::Led} ................................................................
class Led {
public:
    void ledOn(std::string color);
    void ledOff(std::string color);
    void ledToggle(
        std::string color,
        std::uint8_t state);
}; // class Led

} // namespace APP
//$enddecl${AOs::Led} ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//$declare${AOs::LedR} vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
namespace APP {

//${AOs::LedR} ...............................................................
class LedR : public APP::Led {
public:
    void on();
    void off();
}; // class LedR

} // namespace APP
//$enddecl${AOs::LedR} ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//$declare${AOs::LedY} vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
namespace APP {

//${AOs::LedY} ...............................................................
class LedY : public APP::Led {
public:
    std::uint8_t state=0;

public:
    void on();
    void off();
    void toggle();
}; // class LedY

} // namespace APP
//$enddecl${AOs::LedY} ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//$declare${AOs::LedG} vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
namespace APP {

//${AOs::LedG} ...............................................................
class LedG : public APP::Led {
public:
    void on();
    void off();
}; // class LedG

} // namespace APP
//$enddecl${AOs::LedG} ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//$declare${AOs::Button} vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
namespace APP {

//${AOs::Button} .............................................................
class Button : public QP::QActive {
public:
    static Button inst;
    QP::QTimeEvt pullTimeEvt;

public:
    Button();

protected:
    Q_STATE_DECL(initial);
    Q_STATE_DECL(state1);
}; // class Button

} // namespace APP
//$enddecl${AOs::Button} ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//$declare${AOs::Traffic} vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
namespace APP {

//${AOs::Traffic} ............................................................
class Traffic : public QP::QActive {
public:
    static Traffic inst;
    QP::QTimeEvt colorTimeEvt;
    QP::QTimeEvt printTimeEvt;
    LedR ledR;
    LedY ledY;
    LedG ledG;
    std::uint8_t buttonPressed=0;

public:
    Traffic();

protected:
    Q_STATE_DECL(initial);
    Q_STATE_DECL(root);
    Q_STATE_DECL(YtoG);
    Q_STATE_DECL(G);
    Q_STATE_DECL(YtoR);
    Q_STATE_DECL(R);
    Q_STATE_DECL(inactive);
}; // class Traffic

} // namespace APP
//$enddecl${AOs::Traffic} ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

//$skip${QP_VERSION} vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
// Check for the minimum required QP version
#if (QP_VERSION < 730U) || (QP_VERSION != ((QP_RELEASE^4294967295U)%0x2710U))
#error qpcpp version 7.3.0 or higher required
#endif
//$endskip${QP_VERSION} ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//$define${AOs::Led} vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
namespace APP {

//${AOs::Led} ................................................................

//${AOs::Led::ledOn} .........................................................
void Led::ledOn(std::string color) {
    PRINT("ON " + color);
}

//${AOs::Led::ledOff} ........................................................
void Led::ledOff(std::string color) {
    PRINT("OFF " + color);
    (void)color;
}

//${AOs::Led::ledToggle} .....................................................
void Led::ledToggle(
    std::string color,
    std::uint8_t state)
{
    if(state) {
      ledOn(color);
    } else {
      ledOff(color);
    }
}

} // namespace APP
//$enddef${AOs::Led} ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//$define${AOs::LedR} vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
namespace APP {

//${AOs::LedR} ...............................................................

//${AOs::LedR::on} ...........................................................
void LedR::on() {
    ledOn("R");
}

//${AOs::LedR::off} ..........................................................
void LedR::off() {
    ledOff("R");
}

} // namespace APP
//$enddef${AOs::LedR} ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//$define${AOs::LedY} vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
namespace APP {

//${AOs::LedY} ...............................................................

//${AOs::LedY::on} ...........................................................
void LedY::on() {
    ledOn("Y");
}

//${AOs::LedY::off} ..........................................................
void LedY::off() {
    ledOff("Y");
}

//${AOs::LedY::toggle} .......................................................
void LedY::toggle() {
    ledToggle("Y",state);
    state ^= 1;
}

} // namespace APP
//$enddef${AOs::LedY} ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//$define${AOs::LedG} vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
namespace APP {

//${AOs::LedG} ...............................................................

//${AOs::LedG::on} ...........................................................
void LedG::on() {
    ledOn("G");
}

//${AOs::LedG::off} ..........................................................
void LedG::off() {
    ledOff("G");
}

} // namespace APP
//$enddef${AOs::LedG} ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//$define${AOs::Button} vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
namespace APP {

//${AOs::Button} .............................................................
Button Button::inst ;


//${AOs::Button::Button} .....................................................
Button::Button()
: QActive(Q_STATE_CAST(&Button::initial)),
pullTimeEvt(this, PULL_BUTTON_SIG,0)
{}

//${AOs::Button::SM} .........................................................
Q_STATE_DEF(Button, initial) {
    //${AOs::Button::SM::initial}
    std::cout << "init button" << std::endl;
    APP::Button::inst.pullTimeEvt.armX(PULL_BUTTON_TIME, PULL_BUTTON_TIME);
    (void)e; // unused parameter
    return tran(&state1);
}

//${AOs::Button::SM::state1} .................................................
Q_STATE_DEF(Button, state1) {
    QP::QState status_;
    switch (e->sig) {
        //${AOs::Button::SM::state1::PULL_BUTTON}
        case PULL_BUTTON_SIG: {
            switch(QP::QF::consoleGetKey()) {
            case ' ':
             {
              PRINT("space");
              QP::QEvt* evt = Q_NEW(QP::QEvt,BUTTON_SIG);
              POST_TRAFFIC(evt);
             }
            break;
            case 'q':
             {
              QP::QEvt* evt = Q_NEW(QP::QEvt,INACTIVE_SIG);
              POST_TRAFFIC(evt);
             }
            break;
            case 'r':
             {
              QP::QEvt* evt = Q_NEW(QP::QEvt,RESUME_SIG);
              POST_TRAFFIC(evt);
             }
             break;
              default:
            break;
            };
            status_ = Q_RET_HANDLED;
            break;
        }
        default: {
            status_ = super(&top);
            break;
        }
    }
    return status_;
}

} // namespace APP
//$enddef${AOs::Button} ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//$define${AOs::Traffic} vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
namespace APP {

//${AOs::Traffic} ............................................................
Traffic Traffic::inst;

//${AOs::Traffic::Traffic} ...................................................
Traffic::Traffic()
: QActive(Q_STATE_CAST(&Traffic::initial)),
colorTimeEvt(this, TOUT_SIG,0),
printTimeEvt(this, PRINT_SIG,0)
{}

//${AOs::Traffic::SM} ........................................................
Q_STATE_DEF(Traffic, initial) {
    //${AOs::Traffic::SM::initial}
    std::cout << "init traffic" << std::endl;
    APP::Traffic::inst.colorTimeEvt.armX(COLOR_R_TIME, COLOR_Y_INACTIVE_TIME);
    APP::Traffic::inst.printTimeEvt.armX(PRINT_TIME, PRINT_TIME);
    (void)e; // unused parameter

    QS_FUN_DICTIONARY(&Traffic::root);
    QS_FUN_DICTIONARY(&Traffic::YtoG);
    QS_FUN_DICTIONARY(&Traffic::G);
    QS_FUN_DICTIONARY(&Traffic::YtoR);
    QS_FUN_DICTIONARY(&Traffic::R);
    QS_FUN_DICTIONARY(&Traffic::inactive);

    return tran(&root);
}

//${AOs::Traffic::SM::root} ..................................................
Q_STATE_DEF(Traffic, root) {
    QP::QState status_;
    switch (e->sig) {
        //${AOs::Traffic::SM::root::initial}
        case Q_INIT_SIG: {
            status_ = tran(&R);
            break;
        }
        //${AOs::Traffic::SM::root::PRINT}
        case PRINT_SIG: {
            PRINT(APP::Traffic::inst.colorTimeEvt.getCtr()/100);
            status_ = Q_RET_HANDLED;
            break;
        }
        //${AOs::Traffic::SM::root::BUTTON}
        case BUTTON_SIG: {
            APP::Traffic::inst.buttonPressed=1;
            PRINT("button received");
            status_ = Q_RET_HANDLED;
            break;
        }
        //${AOs::Traffic::SM::root::INACTIVE}
        case INACTIVE_SIG: {
            status_ = tran(&inactive);
            break;
        }
        default: {
            status_ = super(&top);
            break;
        }
    }
    return status_;
}

//${AOs::Traffic::SM::root::YtoG} ............................................
Q_STATE_DEF(Traffic, YtoG) {
    QP::QState status_;
    switch (e->sig) {
        //${AOs::Traffic::SM::root::YtoG}
        case Q_ENTRY_SIG: {
            APP::Traffic::inst.ledY.on();
            REARM(COLOR_Y_TIME);
            status_ = Q_RET_HANDLED;
            break;
        }
        //${AOs::Traffic::SM::root::YtoG}
        case Q_EXIT_SIG: {
            APP::Traffic::inst.ledY.off();
            status_ = Q_RET_HANDLED;
            break;
        }
        //${AOs::Traffic::SM::root::YtoG::TOUT}
        case TOUT_SIG: {
            status_ = tran(&G);
            break;
        }
        default: {
            status_ = super(&root);
            break;
        }
    }
    return status_;
}

//${AOs::Traffic::SM::root::G} ...............................................
Q_STATE_DEF(Traffic, G) {
    QP::QState status_;
    switch (e->sig) {
        //${AOs::Traffic::SM::root::G}
        case Q_ENTRY_SIG: {
            APP::Traffic::inst.ledG.on();
            REARM(COLOR_G_TIME);
            status_ = Q_RET_HANDLED;
            break;
        }
        //${AOs::Traffic::SM::root::G}
        case Q_EXIT_SIG: {
            APP::Traffic::inst.ledG.off();
            status_ = Q_RET_HANDLED;
            break;
        }
        //${AOs::Traffic::SM::root::G::TOUT}
        case TOUT_SIG: {
            status_ = tran(&YtoR);
            break;
        }
        //${AOs::Traffic::SM::root::G::BUTTON}
        case BUTTON_SIG: {
            APP::Traffic::inst.buttonPressed=1;
            REARM(COLOR_G_TIME/10);
            PRINT("button received");
            status_ = Q_RET_HANDLED;
            break;
        }
        default: {
            status_ = super(&root);
            break;
        }
    }
    return status_;
}

//${AOs::Traffic::SM::root::YtoR} ............................................
Q_STATE_DEF(Traffic, YtoR) {
    QP::QState status_;
    switch (e->sig) {
        //${AOs::Traffic::SM::root::YtoR}
        case Q_ENTRY_SIG: {
            APP::Traffic::inst.ledY.on();
            REARM(COLOR_Y_TIME);
            status_ = Q_RET_HANDLED;
            break;
        }
        //${AOs::Traffic::SM::root::YtoR}
        case Q_EXIT_SIG: {
            APP::Traffic::inst.ledY.on();
            status_ = Q_RET_HANDLED;
            break;
        }
        //${AOs::Traffic::SM::root::YtoR::TOUT}
        case TOUT_SIG: {
            status_ = tran(&R);
            break;
        }
        default: {
            status_ = super(&root);
            break;
        }
    }
    return status_;
}

//${AOs::Traffic::SM::root::R} ...............................................
Q_STATE_DEF(Traffic, R) {
    QP::QState status_;
    switch (e->sig) {
        //${AOs::Traffic::SM::root::R}
        case Q_ENTRY_SIG: {
            APP::Traffic::inst.ledR.on();


            if(APP::Traffic::inst.buttonPressed==1) {
              REARM(COLOR_R_USER_TIME);
            } else {
            REARM(COLOR_R_TIME);
            };
            status_ = Q_RET_HANDLED;
            break;
        }
        //${AOs::Traffic::SM::root::R}
        case Q_EXIT_SIG: {
            APP::Traffic::inst.ledR.off();
            status_ = Q_RET_HANDLED;
            break;
        }
        //${AOs::Traffic::SM::root::R::TOUT}
        case TOUT_SIG: {
            status_ = tran(&YtoG);
            break;
        }
        //${AOs::Traffic::SM::root::R::BUTTON}
        case BUTTON_SIG: {
            if(APP::Traffic::inst.buttonPressed==0) {
              REARM(COLOR_R_USER_TIME);
            }
            APP::Traffic::inst.buttonPressed=1;\
            PRINT("button received");
            status_ = Q_RET_HANDLED;
            break;
        }
        default: {
            status_ = super(&root);
            break;
        }
    }
    return status_;
}

//${AOs::Traffic::SM::inactive} ..............................................
Q_STATE_DEF(Traffic, inactive) {
    QP::QState status_;
    switch (e->sig) {
        //${AOs::Traffic::SM::inactive}
        case Q_ENTRY_SIG: {
            REARM(COLOR_Y_INACTIVE_TIME);
            status_ = Q_RET_HANDLED;
            break;
        }
        //${AOs::Traffic::SM::inactive::RESUME}
        case RESUME_SIG: {
            status_ = tran(&root);
            break;
        }
        //${AOs::Traffic::SM::inactive::PRINT}
        case PRINT_SIG: {
            PRINT(APP::Traffic::inst.colorTimeEvt.getCtr()/100);
            status_ = Q_RET_HANDLED;
            break;
        }
        //${AOs::Traffic::SM::inactive::TOUT}
        case TOUT_SIG: {
            APP::Traffic::inst.ledY.toggle();
            status_ = Q_RET_HANDLED;
            break;
        }
        default: {
            status_ = super(&top);
            break;
        }
    }
    return status_;
}

} // namespace APP
//$enddef${AOs::Traffic} ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

int main()
{
    QP::QF::init();  // initialize the framework and the underlying RT kernel

    // initialize event pools
    static QF_MPOOL_EL(QP::QEvt) poolSto[10];
    QP::QF::poolInit(poolSto, sizeof(poolSto), sizeof(poolSto[0]));

    // initialize publish-subscribe
    static QP::QSubscrList subscrSto[MAX_PUB_SIG];
    QP::QActive::psInit(subscrSto, Q_DIM(subscrSto));

    QP::QEvt const *trafficQueueSto[10];
    APP::Traffic::inst.start(
        1U,                          // QP prio. of the AO
        trafficQueueSto,             // event queue storage
        Q_DIM(trafficQueueSto),      // queue length [events]
        nullptr, 0U);                // no stack storage

    QP::QEvt const *buttonQueueSto[10];
    APP::Button::inst.start(
        2U,                          // QP prio. of the AO
        buttonQueueSto,             // event queue storage
        Q_DIM(buttonQueueSto),      // queue length [events]
        nullptr, 0U);                // no stack storage

    return QP::QF::run(); // run the QF application
}
